compiler/testData/diagnostics/tests/objects/ObjectsInheritance.kt

package toplevelObjectDeclarations

object CObj {}

object DOjb : <!SUPERTYPE_NOT_INITIALIZED, FINAL_SUPERTYPE!>CObj<!> {}